--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
 
     <!-- ========css========== -->
-    <link rel="stylesheet" href="asest/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                 <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
 
-            <img class="banner-sbj" src="asest/images/hardy.png" alt="">
+            <img class="banner-sbj" src="images/hardy.png" alt="">
 
 
         </div>
@@ -89,25 +89,25 @@
                 <div class="skills-container">
                     <!-- .skill*4>img+h3.skill-title+p.skill-description -->
                     <div class="skill">
-                        <img src="/asest/images/icons/js.png" alt="">
+                        <img src="/images/icons/js.png" alt="">
                         <h3 class="skill-title">Vanilla JavaScript</h3>
                         <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                             the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skill">
-                        <img src="/asest/images/icons/react.png" alt="">
+                        <img src="/images/icons/react.png" alt="">
                         <h3 class="skill-title">React</h3>
                         <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                             the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skill">
-                        <img src="/asest/images/icons/nodejs.png" alt="">
+                        <img src="/images/icons/nodejs.png" alt="">
                         <h3 class="skill-title">Node.js</h3>
                         <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                             the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <div class="skill">
-                        <img src="/asest/images/icons/mongo.png" alt="">
+                        <img src="/images/icons/mongo.png" alt="">
                         <h3 class="skill-title">MongoDB</h3>
                         <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                             the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
@@ -191,9 +191,9 @@
                 Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
             </p>
             <div class="social-links">
-                <a href=""><img src="/asest/images/icons/facebook.png" alt=""></a>
-                <a href=""><img src="/asest/images/icons/twitter.png" alt=""></a>
-                <a href=""><img src="/asest/images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
             </div>
         </div>
         <div class="footer-column">
